Migrates existing samples to more consistent search approach
Signed-off-by: Christopher Grote <cmgrote@users.noreply.github.com>